--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   },
   "name": "blog",
   "version": "1.0.0",
-  "main": "app.mjs",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node app.mjs",
-    "dev" : "nodemon app.mjs",
+    "start": "node index.js",
+    "dev" : "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
